--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -8,7 +8,7 @@ env:
   IMAGE_NAME: "tgrziminiar/go-cache"
 
 jobs:
-  amd64:
+  arm64:
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -27,7 +27,7 @@ jobs:
           file: Dockerfile
           platforms: linux/amd64
           push: true
-          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:v7
+          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:v8
       - name: Deploy to Coolify
         run: | 
          curl --request GET '${{ secrets.COOLIFY_WEBHOOK }}' --header 'Authorization: Bearer ${{ secrets.COOLIFY_TOKEN }}'
