--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -4,22 +4,23 @@ on:
   push:
     branches: ["main"]
 env:
-  REGISTRY: docker.io
-  IMAGE_NAME: "tgrziminiar/go-cache"
+  REGISTRY: ghcr.io
+  IMAGE_NAME: "tgrziminiar/go-cache:latest"
 
 jobs:
-  arm64:
+  amd64:
     runs-on: ubuntu-latest
     permissions:
       contents: read
       packages: write
     steps:
       - uses: actions/checkout@v3
-      - name: Login to docker.io
+      - name: Login to ghcr.io
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.TOKEN  }}
       - name: Build image and push to registry
         uses: docker/build-push-action@v4
         with:
