--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -5,16 +5,20 @@ on:
     branches: ["main"]
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: "tgrziminiar/go-cache"
+  IMAGE_NAME: "catalyzt-tech/agora-cache"
 
 jobs:
-  amd64:
+  build:
     runs-on: ubuntu-latest
     permissions:
       contents: read
       packages: write
     steps:
       - uses: actions/checkout@v3
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
       - name: Login to ghcr.io
         uses: docker/login-action@v2
         with:
@@ -26,7 +30,7 @@ jobs:
         with:
           context: .
           file: Dockerfile
-          platforms: linux/amd64
+          platforms: linux/aarch64
           push: true
           tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
       - name: Deploy to Coolify
